--- a/HW5.qmd
+++ b/HW5.qmd
@@ -33,7 +33,8 @@ So the R code for this is:
 ```{r}
 # Creating data frame for the four strata
 strata_data <- data.frame(
-  stratum = c("Allegan_River", "Allegan_NonRiver", "Kalamazoo_River", "Kalamazoo_NonRiver"),
+  stratum = c("Allegan_River", "Allegan_NonRiver", "Kalamazoo_River", 
+              "Kalamazoo_NonRiver"),
   occupied_units = c(8521, 37265-8521, 17224, 94523-17224),
   blocks = c(940, 3593-940, 1318, 4494-1318)
 )
@@ -43,7 +44,8 @@ strata_data$nonriver_units <- c(37265-8521, 0, 94523-17224, 0)
 strata_data$occupied_units <- c(8521, 37265-8521, 17224, 94523-17224)
 
 strata_data <- data.frame(
-  stratum = c("Allegan_River", "Allegan_NonRiver", "Kalamazoo_River", "Kalamazoo_NonRiver"),
+  stratum = c("Allegan_River", "Allegan_NonRiver", "Kalamazoo_River", 
+              "Kalamazoo_NonRiver"),
   occupied_units = c(8521, 37265-8521, 17224, 94523-17224),
   blocks = c(940, 3593-940, 1318, 4494-1318)
 )
@@ -70,7 +72,8 @@ strata_data$rounded_allocation <- round(strata_data$initial_allocation)
 sum_allocations <- sum(strata_data$rounded_allocation)
 
 if (sum_allocations != total_sample_blocks) {
-  cat("Adjustments needed: Sum =", sum_allocations, "Target =", total_sample_blocks, "\n")
+  cat("Adjustments needed: Sum =", sum_allocations, "Target =", 
+      total_sample_blocks, "\n")
   
   # Adjusting based on fractional parts
   difference <- total_sample_blocks - sum_allocations
@@ -83,7 +86,8 @@ if (sum_allocations != total_sample_blocks) {
         strata_data$rounded_allocation[order_candidates[i]] + 1
     }
   } else if (difference < 0) {
-    # Removing blocks from strata with smallest fractional parts that were rounded up
+    # Removing blocks from strata with smallest fractional 
+    #parts that were rounded up
     order_candidates <- order(strata_data$fractional_part)
     for (i in seq_len(abs(difference))) {
       strata_data$rounded_allocation[order_candidates[i]] <- 
@@ -233,7 +237,8 @@ find_block <- function(sel_num, data) {
 }
 
 # Selecting the blocks
-selected_indices <- sapply(selection_numbers, function(s) which(block_data$CUM_MOS >= s)[1])
+selected_indices <- sapply(selection_numbers, 
+                           function(s) which(block_data$CUM_MOS >= s)[1])
 selected_blocks <- block_data[selected_indices, ]
 
 # Creating a data frame with selection information
@@ -281,7 +286,8 @@ cat("Number of oversized units:", num_oversized, "\n")
 
 if(num_oversized > 0) {
   # Displaying oversized blocks
-  print(oversized_blocks[, c("ID", "COUNTY", "TRACT", "BLOCK", "OCC_HU", "MOS")])
+  print(oversized_blocks[, c("ID", "COUNTY", "TRACT", 
+                             "BLOCK", "OCC_HU", "MOS")])
   
   # Calculating sum of MOS for oversized units
   sum_oversized_MOS <- sum(oversized_blocks$MOS)
@@ -457,7 +463,8 @@ for(i in 1:nrow(selected_blocks_input)) {
     
     linked_blocks[[i]] <- linked
   } else {
-    cat("No blocks found in tract", current_tract, "for selection", i, "\n")
+    cat("No blocks found in tract", 
+        current_tract, "for selection", i, "\n")
   }
 }
 
@@ -557,7 +564,9 @@ linked_blocks$sampling_rate <- ifelse(linked_blocks$OCC_HU > 0,
                                      linked_blocks$phi, 0)
 
 # Display results
-print(linked_blocks[, c("ID", "TRACT", "BLOCK", "OCC_HU", "MOS", "pi", "phi", "sampling_rate")])
+print(linked_blocks[, c("ID", "TRACT", "BLOCK", 
+                        "OCC_HU", "MOS", "pi", "phi", 
+                        "sampling_rate")])
 
 # Number of housing units to sample from each linked block
 linked_blocks$sample_size <- round(linked_blocks$OCC_HU * linked_blocks$phi)
